--- a/global/software/charts/tf/tf-operator.yaml
+++ b/global/software/charts/tf/tf-operator.yaml
@@ -24,6 +24,13 @@ metadata:
         path: .images.tungstenfabric.tf-operator
       dest:
         path: .values.images
+    # Secrets
+    - src:
+        schema: deckhand/Passphrase/v1
+        name: tungsten_auth_password
+        path: .
+      dest:
+        path: .values.auth.tungsten_auth
     # IP addresses
     - src:
         schema: pegleg/CommonAddresses/v1
