Handle Genesis config for aiab
change to include genesis external_ip configuration for aiab
ensuring appropriate values in /etc/hosts

Signed-off-by: Prabhjot Singh Sethi <prabhjot@atsgen.com>

--- a/global/profiles/genesis.yaml
+++ b/global/profiles/genesis.yaml
@@ -61,6 +61,13 @@ metadata:
         path: .genesis.ip
       dest:
         path: .ip
+    - src:
+        schema: pegleg/CommonAddresses/v1
+        name: common-addresses
+        path: .genesis.external_ip
+      dest:
+        path: .external_ip
+
 
     # Command prefix
     - src:
