--- a/global/schemas/promenade/Genesis/v1.yaml
+++ b/global/schemas/promenade/Genesis/v1.yaml
@@ -108,6 +108,9 @@ data:
     ip:
       $ref: '#/definitions/ip_address'
 
+    external_ip:
+      $ref: '#/definitions/ip_address'
+
     labels:
       properties:
         static:
